--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,21 @@
 {
   "name": "Mute Tab",
-  "version": "1.1",
+  "version": "1.2",
   "description": "Restores the 'Mute Tab' functionality of versions prior to Chrome 71.",
   "background": {
-    "scripts": ["background.js"],
+    "scripts": [
+      "background.js"
+    ],
     "persistent": false
   },
-  "permissions": ["activeTab", "contextMenus"],
+  "permissions": [
+    "activeTab",
+    "contextMenus"
+  ],
   "icons": {
-    "16": "images/16.png",
-    "48": "images/48.png",
-    "128": "images/128.png"
+    "16": "images/16_u.png",
+    "48": "images/48_u.png",
+    "128": "images/128_u.png"
   },
   "browser_action": {
     "default_title": "Mute Tab Extension"
